--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
           <ul class="nav navbar-nav">
 
             <li><a href="index.html">Home</a></li>
-            <li><a href="performance.html">Performances</a></li>
+            <li><a href="performances.html">Performances</a></li>
           	<li><a href="photos.html">Photos</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
