--- a/index.html
+++ b/index.html
@@ -16,44 +16,97 @@
   </head>
 
   <body>
+    <div id="wrapper">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">Chinese Chorus</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Chinese Chorus</a>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="performances.html">Performances</a></li>
+              	<li><a href="photos.html">Photos</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+
+        <div id="myCarousel" class="carousel slide bottomborder middletext" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/VocalEssence_Chorus.jpg" alt="Chania">
+            </div>
+
+            <div class="item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/VocalEssence_Chorus.jpg" alt="Chania">
+            </div>
+
+            <div class="item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/VocalEssence_Chorus.jpg" alt="Flower">
+            </div>
+
+            <div class="item">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/VocalEssence_Chorus.jpg" alt="Flower">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
 
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="performances.html">Performances</a></li>
-          	<li><a href="photos.html">Photos</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+        <h1 id="title" class="center">New York City Chinese Chorus</h1>
+        <div class="row">
+          <div class="col-md-4">
+            <h4 id="title" class="center">Title</h4>
+            <p class="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at leo id magna laoreet aliquet. Donec rutrum, turpis in ultricies tincidunt, risus sapien rhoncus neque, sed posuere purus sem at erat. Donec ut ante a leo vulputate convallis quis ut diam. In in enim sit amet quam tempor tincidunt in sed risus. Aliquam tincidunt aliquet dapibus. Duis ac ullamcorper leo. Nulla imperdiet vel tellus nec faucibus. Donec congue vestibulum est non posuere. Mauris quis euismod neque. Nulla facilisis risus id augue dapibus mollis.</p>
+          </div>
+          <div class="col-md-4 middletext">
+            <h4 id="title" class="center">Performances</h4>
+            <p class="center">Aenean quis est purus. Nulla gravida pulvinar justo et malesuada. Nullam elementum leo ac arcu eleifend congue nec vel diam. Fusce pretium fringilla velit. Sed eu maximus quam. Vestibulum sit amet tincidunt purus, a tristique risus. Fusce fermentum porttitor ex eu molestie. Proin laoreet auctor libero fringilla imperdiet. Maecenas tincidunt a justo et consequat. Morbi sit amet lobortis massa. Sed pharetra lacus eros, ut lobortis magna imperdiet ut.</p>
+            <div class="center">
+              <a class="btn btn-default" href="#performances" role="button">See our next performances</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h4 id="title" class="center">Title</h4>
+            <p class="center">Ut lacinia, sem nec ultrices rutrum, eros tellus vulputate purus, a dignissim lacus lacus id libero. Duis pharetra euismod justo sed malesuada. Phasellus a volutpat nisl, ac dignissim orci. Sed commodo sapien vel condimentum vehicula. Suspendisse tristique convallis libero, ac placerat eros tincidunt non. Nullam blandit, velit in scelerisque tincidunt, massa elit commodo urna, nec mollis purus sapien ut turpis. Donec mollis laoreet pharetra. Ut tincidunt elit at augue semper ullamcorper.</p>
+          </div>
+        </div>
 
-          </ul>
-        </div><!--/.nav-collapse -->
+        
+        
+        <div>
+          <a name="performances"></a>
+          <h1>ASDADSA</h1>
+        </div>
       </div>
-    </nav>
-
-    <div class="row">
-    	<div class="col-md-6 col-sm-4">
-    		<p>Portland culpa pop-up kitsch, in marfa sriracha sed franzen ullamco. Fap locavore pabst art party nesciunt pariatur. Polaroid deserunt vice beard, pour-over consequat excepteur art party nisi adipisicing four dollar toast. Raw denim gastropub roof party asymmetrical, viral stumptown paleo hashtag magna keytar you probably haven't heard of them swag disrupt ugh. Poutine gentrify lomo keffiyeh, deserunt semiotics tattooed do pickled umami PBR sed venmo hashtag nulla. Seitan venmo kinfolk master cleanse. Wolf offal drinking vinegar non.</p>
-    	</div>
-    	<div class="col-md-2 col-sm-4">
-    		<p>Portland culpa pop-up kitsch, in marfa sriracha sed franzen ullamco. Fap locavore pabst art party nesciunt pariatur. Polaroid deserunt vice beard, pour-over consequat excepteur art party nisi adipisicing four dollar toast. Raw denim gastropub roof party asymmetrical, viral stumptown paleo hashtag magna keytar you probably haven't heard of them swag disrupt ugh. Poutine gentrify lomo keffiyeh, deserunt semiotics tattooed do pickled umami PBR sed venmo hashtag nulla. Seitan venmo kinfolk master cleanse. Wolf offal drinking vinegar non.</p>
-    	</div>
-    	<div class="col-md-4 col-sm-4">
-    		<p>Portland culpa pop-up kitsch, in marfa sriracha sed franzen ullamco. Fap locavore pabst art party nesciunt pariatur. Polaroid deserunt vice beard, pour-over consequat excepteur art party nisi adipisicing four dollar toast. Raw denim gastropub roof party asymmetrical, viral stumptown paleo hashtag magna keytar you probably haven't heard of them swag disrupt ugh. Poutine gentrify lomo keffiyeh, deserunt semiotics tattooed do pickled umami PBR sed venmo hashtag nulla. Seitan venmo kinfolk master cleanse. Wolf offal drinking vinegar non.</p>
-    	</div>
-    </div>
-
 
 
     <!-- Bootstrap core JavaScript
