--- a/index.html
+++ b/index.html
@@ -91,20 +91,13 @@
             <h4 id="title" class="center">Performances</h4>
             <p class="center">Aenean quis est purus. Nulla gravida pulvinar justo et malesuada. Nullam elementum leo ac arcu eleifend congue nec vel diam. Fusce pretium fringilla velit. Sed eu maximus quam. Vestibulum sit amet tincidunt purus, a tristique risus. Fusce fermentum porttitor ex eu molestie. Proin laoreet auctor libero fringilla imperdiet. Maecenas tincidunt a justo et consequat. Morbi sit amet lobortis massa. Sed pharetra lacus eros, ut lobortis magna imperdiet ut.</p>
             <div class="center">
-              <a class="btn btn-default" href="#performances" role="button">See our next performances</a>
+              <a class="btn btn-default" href="performances.html" role="button">See our next performances</a>
             </div>
           </div>
           <div class="col-md-4">
             <h4 id="title" class="center">Title</h4>
             <p class="center">Ut lacinia, sem nec ultrices rutrum, eros tellus vulputate purus, a dignissim lacus lacus id libero. Duis pharetra euismod justo sed malesuada. Phasellus a volutpat nisl, ac dignissim orci. Sed commodo sapien vel condimentum vehicula. Suspendisse tristique convallis libero, ac placerat eros tincidunt non. Nullam blandit, velit in scelerisque tincidunt, massa elit commodo urna, nec mollis purus sapien ut turpis. Donec mollis laoreet pharetra. Ut tincidunt elit at augue semper ullamcorper.</p>
           </div>
-        </div>
-
-        
-        
-        <div>
-          <a name="performances"></a>
-          <h1>ASDADSA</h1>
         </div>
       </div>
 
